syntax = "proto3";

package example;

message Empty {}

service Executor {
  rpc Execute(Command) returns (Empty);
  rpc Subscribe(SubscribeRequest) returns (stream CommandResult);
}

message SubscribeRequest {
  string user = 1;
}

message Command {
  uint64 command_id = 1;
  string user = 2;
}

message Moment {
  uint64 moment = 1; // in nanoseconds
}

message CommandResult {
  uint64 command_id = 1;
  string user = 2;
  Moment moment = 3;
}
